--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
             </div>
         </nav>
     </header>
+    <!-- The headphone black section -->
 
     <main class="">
         <section class="section-1">
@@ -82,6 +83,7 @@
                 </div>
             </div>
         </section>
+        <!-- category section      -->
 
         <section class="container py-5">
             <div class="row py-5">
@@ -124,6 +126,7 @@
             </div>
         </section>
 
+        <!-- products section -->
 
         <section class="container">
             <div class="row py-5">
@@ -292,6 +295,8 @@
             </div>
         </section>
 
+        <!-- new arrival section -->
+
         <section class="container">
             <div class="row py-5">
                 <div class="col-12 col-sm-6 px-5">
@@ -385,6 +390,8 @@
             </div>
         </section>
 
+        <!-- Digital items -->
+
         <section class="section-2 container rounded pb-5">
             <div class="container" style="height: 490px;">
                 <div class="row FSTrow">
@@ -410,52 +417,54 @@
             </div>
         </section>
 
+        <!-- shipping section -->
+
         <section class="sectionimg">
 
-            <div class="container py-5">
-
-                <div class="row evenly-flex ps-2">
-                    <div class="col-12 col-sm-4 border mx-2 ms-5 pt-4 bg-white rounded" style="width: 290px;;">
-                        <div>
-                            <img src="./images/shipping.png" class="imagefoot" style="width: 90px; height: 50px;"
-                                alt="ship icon image">
-                        </div>
-                        <div>
-                            <h4 class="text-center fs-6">Free shipping</h4>
-                            <p class="text-1">our free shipping services applies to all orders,
-                                regardless of order value or destination.
-                            </p>
-                        </div>
+            <div class="row evenly-flex ps-2 'container' py-5">
+                <div class="col-12 col-sm-4 border mx-2 ms-5 pt-4 bg-white rounded" style="width: 290px;;">
+                    <div>
+                        <img src="./images/shipping.png" class="imagefoot" style="width: 90px; height: 50px;"
+                            alt="ship icon image">
                     </div>
-
-                    <div class="col-12 col-sm-4 border mx-2 ms-5 pt-4 bg-white rounded" style="width: 290px;;">
-                        <div>
-                            <img src="./images/cardicon.png" class="imagefoot" style="width: 70px; height: 60px;"
-                                alt="ship icon image">
-                        </div>
-                        <div>
-                            <h4 class="text-center fs-6">Secure Payment</h4>
-                            <p class="text-1">your payment is always safe and secure at all times
-                            </p>
-                        </div>
+                    <div>
+                        <h4 class="text-center fs-6">Free shipping</h4>
+                        <p class="text-1">our free shipping services applies to all orders,
+                            regardless of order value or destination.
+                        </p>
                     </div>
-
-                    <div class="col-12 col-sm-4 border mx-2 ms-5 bg-white rounded" style="width: 290px;;">
-                        <div>
-                            <img src="./images/supportservice.png" class="imagefoot" style="width: 100px; height: 90px;"
-                                alt="ship icon image">
-                        </div>
-                        <div>
-                            <h4 class="text-center fs-6">support online 24/7</h4>
-                            <p class="text-1">we are available 24/7 to assist you with any questions or issues u may
-                                have
-                            </p>
-                        </div>
-                    </div>
-
                 </div>
+
+                <div class="col-12 col-sm-4 border mx-2 ms-5 pt-4 bg-white rounded" style="width: 290px;;">
+                    <div>
+                        <img src="./images/cardicon.png" class="imagefoot" style="width: 70px; height: 60px;"
+                            alt="ship icon image">
+                    </div>
+                    <div>
+                        <h4 class="text-center fs-6">Secure Payment</h4>
+                        <p class="text-1">your payment is always safe and secure at all times
+                        </p>
+                    </div>
+                </div>
+
+                <div class="col-12 col-sm-4 border mx-2 ms-5 bg-white rounded" style="width: 290px;;">
+                    <div>
+                        <img src="./images/supportservice.png" class="imagefoot" style="width: 100px; height: 90px;"
+                            alt="ship icon image">
+                    </div>
+                    <div>
+                        <h4 class="text-center fs-6">support online 24/7</h4>
+                        <p class="text-1">we are available 24/7 to assist you with any questions or issues u may
+                            have
+                        </p>
+                    </div>
+                </div>
+
             </div>
+
         </section>
+
+        <!-- update section -->
 
         <section>
             <div class="container">
@@ -485,7 +494,75 @@
             <hr>
         </section>
 
+        <section>
+            <div class="container">
+                <div class="row my-5">
+                    <div class="col-12 col-sm-3">
+                        <div class="mt-4 pb-3 ms-3">
+                            <img src="./images/logo.png" alt="my logo image" style="width: 150px;">
+                        </div>
 
+                        <span class="pb-3 ms-3">
+                            <i class="fa-brands fa-facebook-f text-primary p-2 icons rounded"></i>
+                            <i class="fa-brands fa-x-twitter text-primary p-2 icons rounded"></i>
+                            <i class="fa-brands fa-instagram text-primary p-2 icons rounded"></i>
+                            <i class="fa-brands fa-pinterest-p text-primary p-2 icons rounded"></i>
+                        </span>
+                        <p class="text-1 pt-2 ms-3">&copy 2024 electro. All rights reserved.</p>
+                    </div>
+
+                    <div class="col-12 col-sm-3 ">
+                        <ul class="list-group ms-5" style="width: 200px;">
+                            <li class="list-group-item border-0 ">
+                                <h5 class="text-2">Get to know us</h5>
+                                <hr class="m-0 p-0 ms-2" style="width: 50px;">
+                            </li>
+                            <li class="list-group-item border-0 ms-1 py-1 text-1">About us</li>
+                            <li class="list-group-item border-0 ms-1 py-1 text-1">News & blog</li>
+                            <li class="list-group-item border-0 ms-1 py-1 text-1">Careers</li>
+                            <li class="list-group-item border-0 ms-1 py-1 text-1">Contact us</li>
+                            <li class="list-group-item border-0 ms-1 py-1 text-1">How to shop</li>
+                        </ul>
+                    </div>
+
+                    <div class="col-12 col-sm-3">
+                        <ul class="list-group ms-5" style="width: 200px;">
+                            <li class="list-group-item border-0 ">
+                                <h5 class="text-2">Orders & Returns</h5>
+                                <hr class="m-0 p-0 ms-2" style="width: 40px;">
+                            </li>
+                            <li class="list-group-item border-0 ms-1 py-1 text-1">shipping & delivery</li>
+                            <li class="list-group-item border-0 ms-1 py-1 text-1">Return & exchange</li>
+                            <li class="list-group-item border-0 ms-1 py-1 text-1">Track order</li>
+                            <li class="list-group-item border-0 ms-1 py-1 text-1">selling tips</li>
+                            <li class="list-group-item border-0 ms-1 py-1 text-1">Payment</li>
+                        </ul>
+                    </div>
+
+                    <div class="col-12 col-sm-3">
+                        <ul class="list-group  ms-5" style="width: 200px;">
+                            <li class="list-group-item border-0 ">
+                                <h5 class="text-2">Contacts</h5>
+                                <hr class="m-0 p-0 ms-2" style="width: 30px;">
+                            </li>
+                            <li class="list-group-item border-0 ms-1 py-1 text-1">
+                                <i class="fa-solid fa-phone text-primary"></i>(703)6427146
+                            </li>
+                            <li class="list-group-item border-0 ms-1 py-1 text-1">
+                                <i class="fa-solid fa-envelope text-primary fs-6 pe-1"></i>egohzino41@gmail.com
+                            </li>
+                            <li class="list-group-item border-0 ms-1 py-1 text-1">
+                                <i class="fa-solid fa-location-dot fs-6 pe-2 text-primary"></i>ikorodu,Lagos
+                            </li>
+                        </ul>
+                    </div>
+
+
+
+
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer></footer>
