--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
             <div class="container">
                 <div class="row my-5">
                     <div class="col-12 col-sm-3">
-                        <div class="mt-4 pb-3 ms-3">
+                        <div class="my-4 pb-3 mb-5 ms-3">
                             <img src="./images/logo.png" alt="my logo image" style="width: 150px;">
                         </div>
 
@@ -563,9 +563,27 @@
                 </div>
             </div>
         </section>
+        <hr>
     </main>
 
-    <footer></footer>
+    <footer>
+        <div class="container">
+            <div class="row pt-2 pb-0 ">
+                <span class="col-12 col-sm-6  px-5 ms-3 " style="width: 500px;">
+                    <img src="./images/mastercard.png" style="width:30px;" alt="">
+                    <img src="./images/paypal.png" style="width:30px;" alt="">
+                    <img src="./images/visacard.png" style="width:30px;" alt="">
+                    <img src="./images/Apple_Pay.png" style="width:30px;" alt="">
+                    <img src="./images/googlepay (2).png" style="width:30px;" alt="">
+                </span>
+                <div class="col-12 col-sm-6 d-flex px-5 py-3 footerbox" style="width: 450px;">
+                    <p class="p-3 text-1 ">Privacy policy</p>
+                    <p class="p-3 text-1 ">Terms of use</p>
+                    <p class="p-3 text-1 ">shipping policy</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 
 
