--- a/index.html
+++ b/index.html
@@ -199,8 +199,8 @@
                 <div class="card border-0 col-12 col-sm-4" style="width: 17rem;">
 
                     <div class="sectionimg card border-0" style="width: 16rem; height: 215px;">
-                        <img src="./images/asuspink.png" class="card-img-top img-fluid pt-2"
-                            style="width:300px; height:200px;" alt="...">
+                        <img src="./images/asuspink.png" class="card-img-top img-fluid pt-4"
+                            style="width: 380px; height:180px;" alt="...">
                     </div>
                     <div class="card-body">
                         <h2 class="text-1 fs-6">ASUS M220 Gaming Headphone</h2>
@@ -420,48 +420,48 @@
         <!-- shipping section -->
 
         <section class="sectionimg">
+            <div class="container py-5">
+                <div class="row evenly-flex ps-2">
+                    <div class="col-12 col-sm-4 border mx-2 ms-5 pt-4 bg-white rounded" style="width: 290px;;">
+                        <div>
+                            <img src="./images/shipping.png" class="imagefoot" style="width: 90px; height: 50px;"
+                                alt="ship icon image">
+                        </div>
+                        <div>
+                            <h4 class="text-center fs-6">Free shipping</h4>
+                            <p class="text-1">our free shipping services applies to all orders,
+                                regardless of order value or destination.
+                            </p>
+                        </div>
+                    </div>
 
-            <div class="row evenly-flex ps-2 'container' py-5">
-                <div class="col-12 col-sm-4 border mx-2 ms-5 pt-4 bg-white rounded" style="width: 290px;;">
-                    <div>
-                        <img src="./images/shipping.png" class="imagefoot" style="width: 90px; height: 50px;"
-                            alt="ship icon image">
+                    <div class="col-12 col-sm-4 border mx-2 ms-5 pt-4 bg-white rounded" style="width: 290px;;">
+                        <div>
+                            <img src="./images/cardicon.png" class="imagefoot" style="width: 70px; height: 60px;"
+                                alt="ship icon image">
+                        </div>
+                        <div>
+                            <h4 class="text-center fs-6">Secure Payment</h4>
+                            <p class="text-1">your payment is always safe and secure at all times
+                            </p>
+                        </div>
                     </div>
-                    <div>
-                        <h4 class="text-center fs-6">Free shipping</h4>
-                        <p class="text-1">our free shipping services applies to all orders,
-                            regardless of order value or destination.
-                        </p>
+
+                    <div class="col-12 col-sm-4 border mx-2 ms-5 bg-white rounded" style="width: 290px;;">
+                        <div>
+                            <img src="./images/supportservice.png" class="imagefoot" style="width: 100px; height: 90px;"
+                                alt="ship icon image">
+                        </div>
+                        <div>
+                            <h4 class="text-center fs-6">support online 24/7</h4>
+                            <p class="text-1">we are available 24/7 to assist you with any questions or issues u may
+                                have
+                            </p>
+                        </div>
                     </div>
+
                 </div>
-
-                <div class="col-12 col-sm-4 border mx-2 ms-5 pt-4 bg-white rounded" style="width: 290px;;">
-                    <div>
-                        <img src="./images/cardicon.png" class="imagefoot" style="width: 70px; height: 60px;"
-                            alt="ship icon image">
-                    </div>
-                    <div>
-                        <h4 class="text-center fs-6">Secure Payment</h4>
-                        <p class="text-1">your payment is always safe and secure at all times
-                        </p>
-                    </div>
-                </div>
-
-                <div class="col-12 col-sm-4 border mx-2 ms-5 bg-white rounded" style="width: 290px;;">
-                    <div>
-                        <img src="./images/supportservice.png" class="imagefoot" style="width: 100px; height: 90px;"
-                            alt="ship icon image">
-                    </div>
-                    <div>
-                        <h4 class="text-center fs-6">support online 24/7</h4>
-                        <p class="text-1">we are available 24/7 to assist you with any questions or issues u may
-                            have
-                        </p>
-                    </div>
-                </div>
-
             </div>
-
         </section>
 
         <!-- update section -->
