last modification added

--- a/index.html
+++ b/index.html
@@ -75,9 +75,10 @@
                         <button class="btn btn-primary my-3" type="submit">shop now <span><i
                                     class="fa-solid fa-arrow-right"></i></span></button>
                     </div>
+                    
                     <div class="col-12 col-sm-6">
                         <img src="./images/headphone.png" alt="headphone logo" width="500px" height="500px"
-                            class="imgcard">
+                            class="imgcard img-fluid">
                     </div>
 
                 </div>
@@ -139,7 +140,7 @@
                 </div>
             </div>
 
-            <div class="row ps-3">
+            <div class="row ps-3 justify-content-center">
                 <div class="card border-0 col-12 col-sm-3" style="width: 17rem;">
 
                     <img src="https://webshop.asus.com/media/0a/13/e7/1715913195/229161b7d01cb852419c6f781e6857fb.png"
@@ -393,7 +394,7 @@
         <!-- Digital items -->
 
         <section class="section-2 container rounded pb-5">
-            <div class="container" style="height: 490px;">
+            <div class="container">
                 <div class="row FSTrow">
                     <div class="col-12 col-sm-6 text-danger my-5  hero">
 
@@ -410,7 +411,7 @@
                     </div>
                     <div class="col-12 col-sm-6">
                         <img src="./images/background232.png" alt="headphone logo" width="500px" height="500px"
-                            class="imgcard ">
+                            class="imgcard  img-fluid">
                     </div>
 
                 </div>
@@ -479,7 +480,7 @@
                             <div class="col-12 col-sm-6">
                                 <form action="">
                                     <input type="text" placeholder="enter email address"
-                                        class="mt-5 py-2 px-5  rounded-pill border">
+                                        class="mt-5 py-2 px-4  rounded-pill border">
                                 </form>
                             </div>
 
@@ -489,9 +490,9 @@
                             </div>
                         </div>
                     </div>
-                </div>,
+                </div>
             </div>
-            <hr>
+            <hr class="hr-1">
         </section>
 
         <section>
@@ -499,7 +500,7 @@
                 <div class="row my-5">
                     <div class="col-12 col-sm-3">
                         <div class="my-4 pb-3 mb-5 ms-3">
-                            <img src="./images/logo.png" alt="my logo image" style="width: 150px;">
+                            <img src="./images/logo.png" alt="my logo image" class="img-fluid" style="width: 150px;">
                         </div>
 
                         <span class="pb-3 ms-3">
@@ -556,10 +557,6 @@
                             </li>
                         </ul>
                     </div>
-
-
-
-
                 </div>
             </div>
         </section>
